# atcoder_practice_for_rust

./: README.md
atcoder/past201912_c/: Cargo.toml
atcoder/past201912_d/src/: main.rs
atcoder/past201912_d/tests/: sample_inputs.rs
past201912-a/: Cargo.toml
past201912-a/src/: main.rs
past201912-b/src/: main.rs
past201912-b/tests/: sample_inputs.rs
past201912_a/tests/: sample_inputs.rs
past201912_b/: Cargo.toml
past201912_c/src/: main.rs
past201912_c/tests/: sample_inputs.rs
past201912_d/: Cargo.toml
past201912_e/: Cargo.toml
past201912_e/src/: main.rs
past201912_e/tests/: sample_inputs.rs
